[project]
name = "meemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.68.0",
    "ipykernel>=7.2.0",
    "pinecone>=8.1.0",
    "pip>=26.0.1",
    "pymupdf>=1.27.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "youtube-transcript-api>=1.2.4",
]
