[project]
name = "meemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.115.0",
    "google-genai>=1.68.0",
    "ipykernel>=7.2.0",
    "langchain-text-splitters>=1.1.1",
    "neo4j>=6.1.0",
    "pinecone>=8.1.0",
    "pip>=26.0.1",
    "psycopg2>=2.9.11",
    "pymupdf>=1.27.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.30.0",
    "youtube-transcript-api>=1.2.4",
]
